--- a/Geometry/Geometry.csproj
+++ b/Geometry/Geometry.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HexSeg.cs" />
     <Compile Include="IsoSphere.cs" />
     <Compile Include="Quad.cs" />
     <Compile Include="Tools.cs" />
