--- a/Geometry/Geometry.csproj
+++ b/Geometry/Geometry.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)\GameData\BoulderCo\Plugins\";</PostBuildEvent>
+    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)\GameData\EnvironmentalVisualEnhancements\Plugins\";</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
