--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -5,53 +5,14 @@ CLOUDS_SETTINGS
 }
 CLOUD_LAYER_PACK
 {
+	volume = True
 	CLOUD_LAYER
 	{
 		DEFAULTS
 		{
 			body = Laythe
 			altitude = 6000
-			color
-			{
-				r = 0.4
-				g = 0.4
-				b = 0.6
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/kerbin1
-				offset
-				{
-					x = 0.002109109
-					y = 0
-				}
-				speed
-				{
-					x = 1E-05
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detail1
-				scale = 100
-				offset
-				{
-					x = 0.002109109
-					y = 0
-				}
-				speed
-				{
-					x = 1.1E-05
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Laythe
-			altitude = 6000
+			volume = True
 			color
 			{
 				r = 0.4
@@ -97,47 +58,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Duna
 			altitude = 8000
-			color
-			{
-				r = 0.38
-				g = 0.16
-				b = 0.098
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/duna1
-				offset
-				{
-					x = 0.3063397
-					y = 0
-				}
-				speed
-				{
-					x = 3E-05
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detail1
-				scale = 100
-				offset
-				{
-					x = 0.3063397
-					y = 0
-				}
-				speed
-				{
-					x = 3.1E-05
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Duna
-			altitude = 8000
+			volume = True
 			color
 			{
 				r = 0.38
@@ -183,62 +104,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Kerbin
 			altitude = 4000
-			color
-			{
-				r = 1
-				g = 1
-				b = 1
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/kerbin1
-				offset
-				{
-					x = 0.3052678
-					y = 0
-				}
-				speed
-				{
-					x = -2.5E-05
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detail1
-				scale = 100
-				offset
-				{
-					x = 0.3052678
-					y = 0
-				}
-				speed
-				{
-					x = 2.6E-05
-					y = 0
-				}
-			}
-			bump_texture
-			{
-				file = BoulderCo/Clouds/Textures/bump1
-				scale = 90
-				offset
-				{
-					x = 0.3052678
-					y = 0
-				}
-				speed
-				{
-					x = 2.7E-05
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Kerbin
-			altitude = 4000
+			volume = True
 			color
 			{
 				r = 1
@@ -284,47 +150,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Eve
 			altitude = 4000
-			color
-			{
-				r = 0.314
-				g = 0.216
-				b = 0.435
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/eve1
-				offset
-				{
-					x = 0.9218211
-					y = 0
-				}
-				speed
-				{
-					x = -0.00002
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 100
-				offset
-				{
-					x = 0.9218211
-					y = 0
-				}
-				speed
-				{
-					x = -0.0001
-					y = -0.0001
-				}
-			}
-		}
-		SAVED
-		{
-			body = Eve
-			altitude = 4000
+			volume = True
 			color
 			{
 				r = 0.314
@@ -370,47 +196,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Eve
 			altitude = 6000
-			color
-			{
-				r = 0.314
-				g = 0.216
-				b = 0.435
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/eve1
-				offset
-				{
-					x = 0.8436421
-					y = 0
-				}
-				speed
-				{
-					x = -0.00004
-					y = 0.00001
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 100
-				offset
-				{
-					x = 0.8436421
-					y = 0
-				}
-				speed
-				{
-					x = -0.00001
-					y = 0.00001
-				}
-			}
-		}
-		SAVED
-		{
-			body = Eve
-			altitude = 6000
+			volume = True
 			color
 			{
 				r = 0.314
@@ -453,50 +239,11 @@ CLOUD_LAYER_PACK
 	CLOUD_LAYER
 	{
 		DEFAULTS
-		{
-			body = Eve
-			altitude = 8000
-			color
-			{
-				r = 0.411
-				g = 0.204
-				b = 0.663
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/eve1
-				offset
-				{
-					x = 0.4609106
-					y = 0
-				}
-				speed
-				{
-					x = -0.00001
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 100
-				offset
-				{
-					x = 0.4609106
-					y = 0
-				}
-				speed
-				{
-					x = -0.00001
-					y = 0
-				}
-			}
-		}
 		SAVED
 		{
 			body = Eve
 			altitude = 8000
+			volume = True
 			color
 			{
 				r = 0.411
@@ -542,47 +289,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Eve
 			altitude = 10000
-			color
-			{
-				r = 0.411
-				g = 0.204
-				b = 0.663
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/eve1
-				offset
-				{
-					x = 0.1718219
-					y = 0
-				}
-				speed
-				{
-					x = -0.00002
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 100
-				offset
-				{
-					x = 0.1718219
-					y = 0
-				}
-				speed
-				{
-					x = -0.00002
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Eve
-			altitude = 10000
+			volume = True
 			color
 			{
 				r = 0.411
@@ -628,47 +335,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Eve
 			altitude = 12000
-			color
-			{
-				r = 0.643
-				g = 0.424
-				b = 0.914
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/eve1
-				offset
-				{
-					x = 0.08436437
-					y = 0.5
-				}
-				speed
-				{
-					x = -0.000004
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 100
-				offset
-				{
-					x = 0.08436437
-					y = 0.5
-				}
-				speed
-				{
-					x = -0.000004
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Eve
-			altitude = 12000
+			volume = True
 			color
 			{
 				r = 0.643
@@ -714,47 +381,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Jool
 			altitude = 4000
-			color
-			{
-				r = 0.102
-				g = 0.169
-				b = 0.063
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/jool1
-				offset
-				{
-					x = 0.001054554
-					y = 0
-				}
-				speed
-				{
-					x = 5E-06
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 1000
-				offset
-				{
-					x = 0.001054554
-					y = 0
-				}
-				speed
-				{
-					x = 5E-06
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Jool
-			altitude = 4000
+			volume = True
 			color
 			{
 				r = 0.102
@@ -800,47 +427,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Jool
 			altitude = 4000
-			color
-			{
-				r = 0.102
-				g = 0.169
-				b = 0.063
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/joolLayers1
-				offset
-				{
-					x = 0.01370921
-					y = 0
-				}
-				speed
-				{
-					x = 6.5E-05
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 1000
-				offset
-				{
-					x = 0.2637106
-					y = 0
-				}
-				speed
-				{
-					x = 6.5E-05
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Jool
-			altitude = 4000
+			volume = True
 			color
 			{
 				r = 0.102
@@ -886,47 +473,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Jool
 			altitude = 4000
-			color
-			{
-				r = 0.102
-				g = 0.169
-				b = 0.063
-				a = 1
-			}
-			main_texture
-			{
-				file = BoulderCo/Clouds/Textures/joolLayers2
-				offset
-				{
-					x = 0.004218218
-					y = 0
-				}
-				speed
-				{
-					x = 2E-05
-					y = 0
-				}
-			}
-			detail_texture
-			{
-				file = BoulderCo/Clouds/Textures/detaileve1
-				scale = 1000
-				offset
-				{
-					x = 0.2541884
-					y = 0
-				}
-				speed
-				{
-					x = 2E-05
-					y = 0
-				}
-			}
-		}
-		SAVED
-		{
-			body = Jool
-			altitude = 4000
+			volume = True
 			color
 			{
 				r = 0.102
@@ -972,6 +519,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Skelton
 			altitude = 5000
+			volume = True
 			main_texture
 			{
 				file = BoulderCo/Clouds/Textures/duna1
@@ -1016,6 +564,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Erin
 			altitude = 4000
+			volume = True
 			main_texture
 			{
 				file = BoulderCo/Clouds/Textures/kerbin1
@@ -1075,6 +624,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Sentar
 			altitude = 4000
+			volume = True
 			main_texture
 			{
 				file = BoulderCo/Clouds/Textures/jool1
@@ -1119,6 +669,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Sentar
 			altitude = 4000
+			volume = True
 			main_texture
 			{
 				file = BoulderCo/Clouds/Textures/joolLayers1
@@ -1163,6 +714,7 @@ CLOUD_LAYER_PACK
 		{
 			body = Sentar
 			altitude = 4000
+			volume = True
 			main_texture
 			{
 				file = BoulderCo/Clouds/Textures/joolLayers2
