--- a/Clouds/Clouds.csproj
+++ b/Clouds/Clouds.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AtmosphereVolume.cs" />
     <Compile Include="CloudLayer.cs" />
     <Compile Include="Clouds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
