PQS terrain and fog.

--- a/Clouds/Clouds.csproj
+++ b/Clouds/Clouds.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Shaders\Compiled-SphereCloud.shader" />
     <EmbeddedResource Include="Shaders\Compiled-CloudParticle.shader" />
+    <EmbeddedResource Include="Shaders\Compiled-SphereAtmosphere.shader" />
+    <None Include="Shaders\SphereAtmosphere.shader" />
     <None Include="Shaders\SphereCloud.shader" />
     <None Include="Shaders\CloudParticle.shader" />
   </ItemGroup>
