Shader work, city lights as overlay.

--- a/Terrain/Terrain.csproj
+++ b/Terrain/Terrain.csproj
@@ -56,13 +56,14 @@
     <EmbeddedResource Include="Shaders\Compiled-Vertex.shader" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Shaders\Compiled-Terrain.shader" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Geometry\Geometry.csproj">
       <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
       <Name>Geometry</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Shaders\Compiled-SphereTerrain.shader" />
+    <None Include="Shaders\SphereTerrain.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
