--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -1,25 +1,18 @@
 CITY_LIGHTS
 {
-	altitude = 100
-	fadeDistance = 0
-	pqsFadeDistance = 500
-	main_texture
+	Kerbin
 	{
-		file = BoulderCo/CityLights/Textures/main
-		offset
+		mainTexture
 		{
-			x = 0
-			y = 0
+			name = BoulderCo/CityLights/Textures/main
+			scale = 1
+			offset = 0,0,0
 		}
-	}
-	detail_texture
-	{
-		file = BoulderCo/CityLights/Textures/detail
-		offset
+		detailTexture
 		{
-			x = 0
-			y = 0
+			name = BoulderCo/CityLights/Textures/detail
+			scale = 60
+			offset = 0,0,0
 		}
-		scale = 60
 	}
 }
