--- a/PQSManager/PQSManager.csproj
+++ b/PQSManager/PQSManager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{00BDFD23-EC77-4876-AC73-11AA9124EA35}</ProjectGuid>
+    <ProjectGuid>{BDC8381A-C16B-4FD1-AFB4-D30EA906E367}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Terrain</RootNamespace>
-    <AssemblyName>Terrain</AssemblyName>
+    <RootNamespace>PQSManager</RootNamespace>
+    <AssemblyName>PQSManager</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -48,30 +48,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TerrainManager.cs" />
+    <Compile Include="PQSManager.cs" />
+    <Compile Include="PQSModWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TerrainObject.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Shaders\Compiled-Normals.shader" />
-    <EmbeddedResource Include="Shaders\Compiled-Tangents.shader" />
-    <EmbeddedResource Include="Shaders\Compiled-uv1.shader" />
-    <EmbeddedResource Include="Shaders\Compiled-uv2.shader" />
-    <EmbeddedResource Include="Shaders\Compiled-Vertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EveManager\EveManager.csproj">
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
       <Name>EveManager</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Geometry\Utils.csproj">
-      <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
-      <Name>Utils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Shaders\Compiled-SphereTerrain.shader" />
-    <None Include="Shaders\SphereTerrain.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
