--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -2,17 +2,11 @@ EVE_CITY_LIGHTS
 {
 	Kerbin
 	{
-		mainTexture
+		cityLightsMaterial
 		{
-			name = BoulderCo/CityLights/Textures/main
-			scale = 1
-			offset = 0,0,0
-		}
-		detailTexture
-		{
-			name = BoulderCo/CityLights/Textures/detail
-			scale = 60
-			offset = 0,0,0
+			_DarkOverlayTex = BoulderCo/CityLights/Textures/main
+			_DarkOverlayDetailTex = BoulderCo/CityLights/Textures/detail
+			_DarkOverlayDetailScale = 60
 		}
 	}
 }
