--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -2,17 +2,13 @@ EVE_TERRAIN
 {
 	Kerbin
 	{
-		detailTexture
+		terrainMaterial
 		{
-			name = BoulderCo/Terrain/Textures/grass
-			scale = 4000
-			offset = 0,0,0
-		}
-		verticalTexture
-		{
-			name = BoulderCo/Terrain/Textures/rock
-			scale = 200
-			offset = 0,0,0
+			_DetailTex = BoulderCo/Terrain/Textures/grass
+			_DetailVertTex = BoulderCo/Terrain/Textures/rock
+			_DetailScale = 4000
+			_DetailVertScale = 200
+			_DetailDist = .0001
 		}
 	}
 }
