Clouds Materials are handled.

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -5,17 +5,19 @@ EVE_ATMOSPHERE
 		body = Kerbin
 		layer2D
 		{
-			mainTexture
+			cloudMaterial
 			{
-				name = BoulderCo/Atmosphere/Textures/kerbin1
-				scale = 1
-				offset = 0,0,0
-			}
-			detailTexture
-			{
-				name = BoulderCo/Atmosphere/Textures/detail
-				scale = 60
-				offset = 0,0,0
+				_Color = 1,1,1,1
+				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+				_DetailTex = BoulderCo/Atmosphere/Textures/detail
+				_FalloffPow = 2f
+				_FalloffScale = 3f
+				_DetailScale = 60f
+				_DetailDist = 0.00875f
+				_MinLight = .5f
+				_FadeDist = 10f
+				_FadeScale = .002f
+				_RimDist = 1f
 			}
 		}
 	}
