--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -5,19 +5,20 @@ EVE_ATMOSPHERE
 		body = Kerbin
 		layer2D
 		{
+			speed = .0001, 0, 0
 			cloudMaterial
 			{
-				_Color = 1,1,1,1
+				_Color = 1, 1, 1, 1
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 				_DetailTex = BoulderCo/Atmosphere/Textures/detail
-				_FalloffPow = 2f
-				_FalloffScale = 3f
-				_DetailScale = 60f
-				_DetailDist = 0.00875f
-				_MinLight = .5f
-				_FadeDist = 10f
-				_FadeScale = .002f
-				_RimDist = 1f
+				_FalloffPow = 2
+				_FalloffScale = 3
+				_DetailScale = 60
+				_DetailDist = 0.00875
+				_MinLight = .5
+				_FadeDist = 10
+				_FadeScale = .002
+				_RimDist = 1
 			}
 		}
 	}
