working on rotation matrixes.

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -5,20 +5,13 @@ EVE_ATMOSPHERE
 		body = Kerbin
 		layer2D
 		{
-			speed = .0001, 0, 0
+			speed = 30
+			detailSpeed = 6
 			cloudMaterial
 			{
-				_Color = 1, 1, 1, 1
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
-				_DetailTex = BoulderCo/Atmosphere/Textures/detail
-				_FalloffPow = 2
-				_FalloffScale = 3
+				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 				_DetailScale = 60
-				_DetailDist = 0.00875
-				_MinLight = .5
-				_FadeDist = 10
-				_FadeScale = .002
-				_RimDist = 1
 			}
 		}
 	}
