--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -14,5 +14,16 @@ EVE_ATMOSPHERE
 				_DetailScale = 60
 			}
 		}
+		layerVolume
+		{
+			speed = 30
+			texture = BoulderCo/Atmosphere/Textures/kerbin1
+			particleMaterial
+			{
+				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
+				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
+				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+			}
+		}
 	}
 }
