--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -1,29 +1,43 @@
 EVE_ATMOSPHERE
 {
-	Kerbin-clouds1
+	Kerbin
 	{
-		body = Kerbin
-		layer2D
+		Kerbin-clouds1
 		{
-			speed = 30
-			detailSpeed = 6
-			cloudMaterial
+			layer2D
 			{
-				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
-				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-				_DetailScale = 60
+				speed = 30
+				detailSpeed = 6
+				cloudMaterial
+				{
+					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+					_DetailScale = 60
+				}
+			}
+			layerVolume
+			{
+				speed = 30
+				texture = BoulderCo/Atmosphere/Textures/kerbin1
+				particleMaterial
+				{
+					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
+					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
+					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				}
 			}
 		}
-		layerVolume
+		Kerbin-clouds2
 		{
-			speed = 30
-			texture = BoulderCo/Atmosphere/Textures/kerbin1
-			particleMaterial
-			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
-			}
+		}
+		Kerbin-clouds3
+		{
+		}
+		Kerbin-clouds4
+		{
+		}
+		Kerbin-clouds5
+		{
 		}
 	}
 }
