--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -4,6 +4,7 @@ EVE_ATMOSPHERE
 	{
 		Kerbin-clouds1
 		{
+			altitude = 4000
 			layer2D
 			{
 				speed = 30
@@ -26,18 +27,6 @@ EVE_ATMOSPHERE
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				}
 			}
-		}
-		Kerbin-clouds2
-		{
-		}
-		Kerbin-clouds3
-		{
-		}
-		Kerbin-clouds4
-		{
-		}
-		Kerbin-clouds5
-		{
 		}
 	}
 }
