Added daylight cities.

--- a/CityLights/CityLights.csproj
+++ b/CityLights/CityLights.csproj
@@ -59,13 +59,13 @@
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
       <Name>EveManager</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Geometry\Utils.csproj">
-      <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
-      <Name>Utils</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Terrain\Terrain.csproj">
       <Project>{00bdfd23-ec77-4876-ac73-11aa9124ea35}</Project>
       <Name>Terrain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
+      <Name>Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
