--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -4,9 +4,10 @@ EVE_CITY_LIGHTS
 	{
 		cityLightsMaterial
 		{
-			_DarkOverlayTex = BoulderCo/CityLights/Textures/main
-			_DarkOverlayDetailTex = BoulderCo/CityLights/Textures/detail
-			_DarkOverlayDetailScale = 60
+			_CityOverlayTex = BoulderCo/CityLights/Textures/main
+			_CityOverlayDetailScale = 60
+			_CityDarkOverlayDetailTex = BoulderCo/CityLights/Textures/detaildark
+			_CityLightOverlayDetailTex = BoulderCo/CityLights/Textures/detaillight
 		}
 	}
 }
