--- a/Terrain/Terrain.csproj
+++ b/Terrain/Terrain.csproj
@@ -60,9 +60,9 @@
     <EmbeddedResource Include="Shaders\Compiled-Vertex.shader" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EveManager\EveManager.csproj">
+    <ProjectReference Include="..\EveManager\EVEManager.csproj">
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
-      <Name>EveManager</Name>
+      <Name>EVEManager</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utils\Utils.csproj">
       <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
@@ -71,6 +71,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Shaders\Compiled-SphereTerrain.shader" />
+    <EmbeddedResource Include="Shaders\Compiled-SpherePlanet.shader" />
+    <None Include="Shaders\SpherePlanet.shader" />
     <None Include="Shaders\SphereTerrain.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
