--- a/CityLights/CityLights.csproj
+++ b/CityLights/CityLights.csproj
@@ -55,9 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EveManager\EveManager.csproj">
+    <ProjectReference Include="..\EveManager\EVEManager.csproj">
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
-      <Name>EveManager</Name>
+      <Name>EVEManager</Name>
     </ProjectReference>
     <ProjectReference Include="..\Terrain\Terrain.csproj">
       <Project>{00bdfd23-ec77-4876-ac73-11aa9124ea35}</Project>
