Progress on ocean shader

--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -13,5 +13,12 @@ EVE_TERRAIN
 		planetMaterial
 		{
 		}
+		oceanMaterial
+		{
+			_DetailTex = BoulderCo/Terrain/Textures/ocean
+			_DetailScale = 1000
+			_DetailDist = .000001
+			_Clarity = .00075
+		}
 	}
 }
