--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -15,6 +15,8 @@ EVE_TERRAIN
 		}
 		oceanMaterial
 		{
+			_Color = 0,0.38823,1,1
+			_UnderColor = 0,.1992,.5976,1
 			_DetailTex = BoulderCo/Terrain/Textures/ocean
 			_DetailScale = 1000
 			_DetailDist = .000001
