Added Scaled Space layer

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -27,6 +27,20 @@ EVE_ATMOSPHERE
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				}
 			}
+			scaledLayer2D
+			{
+				detailSpeed = 6
+				cloudMaterial
+				{
+					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+					_DetailScale = 60
+					_FadeDist = .4
+					_FadeScale = .25
+					_RimDist = 1
+					_DetailDist = 0.00875
+				}
+			}
 		}
 	}
 }
