--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -43,4 +43,47 @@ EVE_ATMOSPHERE
 			}
 		}
 	}
+	
+	Jool
+	{
+		Jool-clouds1
+		{
+			altitude = 40000
+			speed = 30
+			layer2D
+			{
+				detailSpeed = 6
+				cloudMaterial
+				{
+					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+					_DetailScale = 60
+				}
+			}
+			layerVolume
+			{
+				texture = BoulderCo/Atmosphere/Textures/kerbin1
+				particleMaterial
+				{
+					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
+					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
+					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				}
+			}
+			scaledLayer2D
+			{
+				detailSpeed = 6
+				cloudMaterial
+				{
+					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+					_DetailScale = 60
+					_FadeDist = .4
+					_FadeScale = .25
+					_RimDist = 1
+					_DetailDist = 0.00875
+				}
+			}
+		}
+	}
 }
