--- a/PQSManager/PQSManager.csproj
+++ b/PQSManager/PQSManager.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PQSManager.cs" />
-    <Compile Include="PQSModWrapper.cs" />
+    <Compile Include="PQSWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
