RSS re-loading at space center

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -21,10 +21,9 @@ EVE_ATMOSPHERE
 					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 					_DetailScale = 60
-					_FadeDist = .4
-					_FadeScale = .25
-					_RimDist = 1
-					_DetailDist = 0.00875
+					_DetailDist = 0.0012
+					_FadeScale = 2.25
+				    _RimDist = .06
 				}
 			}
 			layerVolume
