--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -36,6 +36,13 @@ EVE_ATMOSPHERE
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				}
 			}
+			atmosphere
+			{
+				atmosphereMaterial
+				{
+				}
+			}
+
 		}
 	}
 	
