--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -40,6 +40,8 @@ EVE_ATMOSPHERE
 			{
 				atmosphereMaterial
 				{
+					_Color = 0.41796875, 0.8046875, 1, 1
+					_Visibility = .00002
 				}
 			}
 
