Doing cool ocean stuff.
Had a clever idea about how to "fake" the depth of the ocean WITHOUT the
depth buffer.

--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -8,19 +8,20 @@ EVE_TERRAIN
 			_DetailVertTex = BoulderCo/Terrain/Textures/rock
 			_DetailScale = 4000
 			_DetailVertScale = 200
-			_DetailDist = .00001
+			_DetailDist = .0015
+			_OceanColor = 0,0.10823,.5,1
 		}
 		planetMaterial
 		{
 		}
-		oceanMaterial
-		{
-			_Color = 0,0.38823,1,1
-			_UnderColor = 0,.1992,.5976,1
-			_DetailTex = BoulderCo/Terrain/Textures/ocean
-			_DetailScale = 1000
-			_DetailDist = .000001
-			_Clarity = .002
-		}
+#		oceanMaterial
+#		{
+#			_Color = 0,0.38823,1,1
+#			_UnderColor = 0,.1992,.5976,1
+#			_DetailTex = BoulderCo/Terrain/Textures/ocean
+#			_DetailScale = 1000
+#			_DetailDist = .000001
+#			_Clarity = .002
+#		}
 	}
 }
