--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -8,8 +8,9 @@ EVE_TERRAIN
 			_DetailVertTex = BoulderCo/Terrain/Textures/rock
 			_DetailScale = 4000
 			_DetailVertScale = 200
-			_DetailDist = .0015
+			_DetailDist = .00001
 			_OceanColor = 0,0.10823,.5,1
+			_OceanDepthFactor = .0015
 		}
 		planetMaterial
 		{
