Trying stuff out with procedural shading...

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -36,16 +36,23 @@ EVE_ATMOSPHERE
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				}
 			}
+		}
+		Atmosphere
+		{
+			altitude = 12000
+			speed = 0
+			scaledOverlay = Geometry
 			atmosphere
 			{
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, .45
-					_Visibility = .00002
+					_Visibility = .000035
 				}
 			}
 
 		}
+
 	}
 	
 	
