--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleCylinder.cs" />
     <Compile Include="GUIHelper.cs" />
     <Compile Include="HalfSphere.cs" />
     <Compile Include="HexSeg.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Quad.cs" />
     <Compile Include="Tools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TriangleIndices.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
