much better atmosphere effect.
still need to sort out space/altitude transition and scaled space.

--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -85,7 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleCylinder.cs" />
+    <Compile Include="SimpleCube.cs" />
     <Compile Include="GUIHelper.cs" />
     <Compile Include="HalfSphere.cs" />
     <Compile Include="HexSeg.cs" />
