small ammount of progess... still need to fix lighting.

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -37,8 +37,9 @@ EVE_ATMOSPHERE
 			{
 				atmosphereMaterial
 				{
-					_Color = 0.41796875, 0.8046875, 1, .45
-					_Visibility = .000035
+					_Color = 0.41796875, 0.8046875, 1, 1
+					_DensityRatio = 0
+					_Visibility = .00035
 				}
 			}
 
