--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -30,7 +30,7 @@ EVE_ATMOSPHERE
 		}
 		Atmosphere
 		{
-			altitude = 18000
+			altitude = 42000
 			speed = 0
 			scaledOverlay = Geometry
 			atmosphere
@@ -38,8 +38,9 @@ EVE_ATMOSPHERE
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, 1
-					_DensityRatio = 0
-					_Visibility = .00035
+					_DensityRatioY = .99
+					_DensityRatioX = 1.6
+					_Visibility = .00025
 				}
 			}
 
